--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "vitest": "^3.2.4",
     "zod": "^3.25.67"
   },
   "scripts": {
-  "server": "tsx watch src/server.ts",
-  "dev": "tsx src/server.ts"
-},
+    "server": "tsx watch src/server.ts",
+    "dev": "tsx src/server.ts"
+  },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.7",
     "prisma": "^6.10.1",
