--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "vitest": "^3.2.4",
     "zod": "^3.25.67"
   },
@@ -17,6 +19,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^6.10.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
