feat: fluxo todo do utilizador do trabalhador, autenticação com base em email e senha e envio de email.

--- a/.exemple.env
+++ b/.exemple.env
@@ -2,3 +2,10 @@ DATABASE_URL=""
 NODE_ENV=dev
 PORT=""
 JWT_SECRET=
+EMAIL_PASSWORD=""
+EMAIL_PORT=465
+EMAIL_NAME="Kuvica"
+EMAIL_HOST=smtp.gmail.com
+EMAIL_SECURE=true
+EMAIL_TLS=true
+EMAIL_USER=
