--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.10.1",
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
@@ -18,8 +19,14 @@
   },
   "scripts": {
     "server": "tsx watch src/server.ts",
-    "dev": "tsx src/server.ts"
+    "dev": "tsx src/server.ts",
+    "seed": "ts-node prisma/seed.ts"
   },
+
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
+
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
@@ -32,6 +39,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^6.10.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
