--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "kuvica-api",
+  "version": "1.0.0",
+  "description": "APi para rede para empregabilidade",
+  "main": "build/server.js",
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.10.1",
@@ -9,24 +17,25 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-list-routes": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "vitest": "^3.2.4",
+    "winston": "^3.17.0",
     "zod": "^3.25.67"
   },
   "scripts": {
     "server": "tsx watch src/server.ts",
     "dev": "tsx src/server.ts",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "start": "node build/server.js"
   },
-
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
-
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
