--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "kuvica-api",
   "version": "1.0.0",
   "description": "APi para rede para empregabilidade",
-  "main": "build/server.js",
+  "main": "server.js",
+  "licence": "MIT",
   "type": "module",
   "engines": {
     "node": ">=20"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -13,6 +17,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
@@ -21,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -29,15 +35,18 @@
     "zod": "^3.25.67"
   },
   "scripts": {
-    "server": "tsx watch src/server.ts",
-    "dev": "tsx src/server.ts",
+    "server": "tsx watch ./src/bootstrap/server.ts",
+    "build": "tsup src --out-dir dist --format cjs --dts",
+    "dev": "tsx ./src/bootstrap/server.ts",
     "seed": "ts-node prisma/seed.ts",
-    "start": "node build/server.js"
+    "start": "npx prisma generate && node dist/bootstrap/server.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
@@ -48,10 +57,12 @@
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
