registar o logger no projecto

--- a/.exemple.env
+++ b/.exemple.env
@@ -1,13 +1,13 @@
-DATABASE_URL=""
-NODE_ENV=dev
-PORT=""
+DATABASE_URL=
+NODE_ENV=
+PORT=
 JWT_SECRET=
-EMAIL_PASSWORD=""
-EMAIL_PORT=465
-EMAIL_NAME="Kuvica"
-EMAIL_HOST=smtp.gmail.com
-EMAIL_SECURE=true
-EMAIL_TLS=true
+EMAIL_PASSWORD=
+EMAIL_PORT=
+EMAIL_NAME=
+EMAIL_HOST=
+EMAIL_SECURE=
+EMAIL_TLS=
 EMAIL_USER=
 API_PUBLIC_URL=
 API_ORIGINS=
