--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "kuvica-api",
   "version": "1.0.0",
   "description": "APi para rede para empregabilidade",
-  "main": "server.cjs",
+  "main": "dist/server.js",
   "licence": "MIT",
-  "type": "module",
   "engines": {
     "node": ">=20"
   },
@@ -41,7 +40,7 @@
     "build": "tsup src --out-dir dist",
     "dev": "tsx ./src/bootstrap/server.ts",
     "seed": "ts-node prisma/seed.ts",
-    "start": "npx prisma generate && node dist/bootstrap/server.cjs"
+    "start": "npx prisma generate && node dist/bootstrap/server.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
