Integração do sentry na aplicação

--- a/.exemple.env
+++ b/.exemple.env
@@ -1,13 +1,18 @@
 DATABASE_URL=
-NODE_ENV=
 PORT=
-JWT_SECRET=
+API_PUBLIC_URL=
+API_ORIGINS=
+SENTRY_HTTP=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_URL=
+EMAIL_HOST=
+EMAIL_NAME=
 EMAIL_PASSWORD=
 EMAIL_PORT=
-EMAIL_NAME=
-EMAIL_HOST=
 EMAIL_SECURE=
 EMAIL_TLS=
 EMAIL_USER=
-API_PUBLIC_URL=
-API_ORIGINS=
+JWT_SECRET=
+NODE_ENV=
