--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.10.1",
+    "@sentry/node": "^10.17.0",
+    "@sentry/tracing": "^7.120.4",
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -40,7 +42,8 @@
     "build": "tsup src --out-dir dist",
     "dev": "tsx ./src/bootstrap/server.ts",
     "seed": "ts-node prisma/seed.ts",
-    "start": "npx prisma generate && node dist/bootstrap/server.js"
+    "start": "npx prisma generate && node dist/bootstrap/server.js",
+    "sentry:sourcemaps": "sentry-cli sourcemaps upload ./dist"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
